Removed code smells & modified enabled() and display() methods for topology provider